--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
         <div class="wrapper">
             <ul>
                 <li class="features-list">
-                    <img src="/assets/img/inoco-de-caracteristicas-1.png" alt="">
+                    <img src="./assets/img/inoco-de-caracteristicas-1.png" alt="">
                     <h3>EASY TO EDIT</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mollis turpis ac libero interdum,
                         id fringilla purus feugiat. Etiam malesuada mattis nibh en bibendum.</p>
                 </li>
                 <li class="features-list">
-                    <img src="/assets/img/inoco-de-caracteristicas-2.png" alt="">
+                    <img src="./assets/img/inoco-de-caracteristicas-2.png" alt="">
                     <h3>LAYERED PSD</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mollis turpis ac libero interdum,
                         id fringilla purus feugiat. Etiam malesuada mattis nibh en bibendum.</p>
                 </li>
                 <li class="features-list">
-                    <img src="/assets/img/inoco-de-caracteristicas-3.png" alt="">
+                    <img src="./assets/img/inoco-de-caracteristicas-3.png" alt="">
                     <h3>READY TO GO</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mollis turpis ac libero interdum,
                         id fringilla purus feugiat. Etiam malesuada mattis nibh en bibendum.</p>
@@ -70,7 +70,7 @@
                     reprehenderit atque pariatur, maxime veniam voluptatem nulla ut voluptate laudantium ipsum a
                     assumenda
                     rem autem magni aspernatur.</p>
-                <img src="/assets/img/video-placeholdervideo-placeholder.jpg" alt="">
+                <img src="./assets/img/video-placeholdervideo-placeholder.jpg" alt="">
             </article>
         </div>
     </section>
